# dc-api-core.rs

./: .gitignore  .npmignore  Cargo.toml  index.d.ts  index.js  native.d.ts  native.js  package.json  readme.md  router.js  test.js
.github/workflows/: CI.yml
core/: Cargo.toml
core/src/: http1.rs  lib.rs  websocket.rs
core/src/app/: config.rs  mod.rs  router.rs  server.rs
core/src/context/: http.rs  ws.rs
core/src/http/: cors.rs  entity.rs  mod.rs
core/src/utils/: log.rs  macros.rs  mod.rs  stream.rs
dc_macro/: Cargo.toml
dc_macro/src/: lib.rs
macro/: Cargo.toml
macro/src/: lib.rs  utils.rs
native/core/: Cargo.toml
native/core/src/: http1.rs  lib.rs  websocket.rs
native/core/src/context/: http.rs  mod.rs  websocket.rs
native/core/src/http/: entity.rs  mod.rs
native/core/src/parsers/: query_string.rs
native/core/src/routing/: mod.rs
native/core/src/utils/: callers.rs  controller.rs  js.rs  json.rs  macros.rs  mod.rs  stream.rs
native/macro/: Cargo.toml
npm/: prepublish.js
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: http1.rs  lib.rs
src/context/: mod.rs
src/http/: codes.rs  entity.rs  mod.rs
src/routing/: mod.rs
src/utils/: callers.rs  controller.rs  json.rs  macros.rs
test/: Cargo.toml  config.json  index.js  package.json
test/controllers/: TestEndpoint.js
test/src/: main.rs
test/tasks/: controller-context.test.js  query.test.js  routing.test.js
test/utils/: index.js
utils/: case-convert.js
