[package]
edition = "2021"
name = "dc-api-core"
version = "0.4.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.0.3", default-features = false, features = ["tokio_rt", "napi6", "serde-json"] }
napi-derive = { version = "2.0.7", default-features = false, features = ["compat-mode"] }
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
async-trait = "0.1.52"
serde_json = "1.0.74"
regex = "1.5.4"
lazy_static = "1.4.0"
dc_macro = { path = "./dc_macro" }

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
