[package]
name = "dc-api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
bufstream = "0.1.4"
byteorder = "1.4.3"
base64 = "0.13.0"
sha1 = "0.10.1"
json = "0.12.4"
tungstenite = "0.17.3"
dc-macro = { path = "../macro" }